--- a/services.html
+++ b/services.html
@@ -31,50 +31,52 @@
               </ul>
           </nav>
     </section>
-
-   <div class="container"></div>
-    <div class="row text-center">
-        <div class="col-md-6">
-            <img src="images/download (3).png" class="service-img" alt="1">
-            <h4>Website Development</h4>
-            <p>Everyone's got a website, so why does your site has to be like everyone else's?
-                We make something your audience wow with each buttery scroll of their fingers!
-</p>   
+    <div class="absout">
+        <div class="absin">
+          <canvas id="canvas"></canvas>
         </div>
-    
-        <div class="col-md-6">
-            <img src="images/download2.png" class="service-img" alt="2">
-            <h4>Mobile Apps</h4>
-            <p> Apps are supposed to be made that people want to use their phones and not throw
-                them around. We code a structure that is technically strong, scalable and so
-                easy that you can keep growing even when we're not around.   </p>   
+        <div class="container content-wrapper absin services-con" >
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-md-6">
+                        <img src="images/download (3).png" class="service-img" alt="1">
+                        <h4>Website Development</h4>
+                        <p>Everyone's got a website, so why does your site has to be like everyone else's?
+                            We make something your audience wow with each buttery scroll of their fingers!</p>   
+                    </div>
+                    <div class="col-md-6">
+                        <img src="images/download2.png" class="service-img" alt="2">
+                        <h4>Mobile Apps</h4>
+                        <p> Apps are supposed to be made that people want to use their phones and not throw
+                            them around. We code a structure that is technically strong, scalable and so
+                            easy that you can keep growing even when we're not around.   </p>   
+                    </div>
+                </div>
+           </div>
+           <div class="container">
+           <div class="row text-center">
+               <div class="col-md-6">
+                   <img src="images/download3.png" class="service-img" alt="3">
+                   <h4>UI/UX Design</h4>
+                   <p>There are great designs out there but does those designs show what you are as a
+                    person, as a brand? We design something that is humane, visually appealing and
+                    connects well with its audience but does not complicate things. </p>   
+               </div>
+           
+               <div class="col-md-6">
+                   <img src="images/download4.png" class="service-img" alt="4">
+                   <h4>Branding</h4>
+                   <p> You have a market changing idea, a super team but a small difference in how your
+                    users portray you can change everything. We help you in building your brand and
+                    tell its story to the world.</p>   
+               </div>
+           </div>
+          </div>
         </div>
-
     </div>
-   </div>
-   <div class="container"></div>
-   <div class="row text-center">
-       <div class="col-md-6">
-           <img src="images/download3.png" class="service-img" alt="3">
-           <h4>UI/UX Design</h4>
-           <p>There are great designs out there but does those designs show what you are as a
-            person, as a brand? We design something that is humane, visually appealing and
-            connects well with its audience but does not complicate things. </p>   
-       </div>
    
-       <div class="col-md-6">
-           <img src="images/download4.png" class="service-img" alt="4">
-           <h4>Branding</h4>
-           <p> You have a market changing idea, a super team but a small difference in how your
-            users portray you can change everything. We help you in building your brand and
-            tell its story to the world.</p>   
-       </div>
+    <script src="script2.js"></script>
 
-   </div>
-  </div>
-
-  
-    <script src="script.js"></script>
  
 </body>
 </html>
